# vpn-deployer

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: tailscale-setup.sh
cloudflare-pages-files/: README.md  _headers  _redirects  index.html
src/: app.rs  main.rs
src/models/: mod.rs
src/services/: digitalocean.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/screens/: auth.rs  complete.rs  deploy.rs  error.rs  loading.rs  mod.rs  region_select.rs  tailscale_auth.rs  welcome.rs
