[package]
name = "vpn-deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
